--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -1,6 +1,20 @@
 <div class="container mt-5">
   <h1 class="text-center mb-4">グループ管理</h1>
 
+  <%= form_with(url: admin_groups_path, method: :get, local: true, class: "mb-4") do |form| %>
+    <div class="row justify-content-center">
+      <div class="col-md-3">
+        <%= form.text_field :search, placeholder: "グループ名で検索", class: "form-control" %>
+      </div>
+      <div class="col-md-3">
+        <%= form.text_field :owner_name, placeholder: "オーナー名で検索", class: "form-control" %>
+      </div>
+      <div class="col-md-2">
+        <%= form.submit '検索', class: "btn btn-primary w-100" %>
+      </div>
+    </div>
+  <% end %>
+
   <table class="table table-hover table-bordered">
     <thead class="table-light">
       <tr>
@@ -19,8 +33,8 @@
             <%= image_tag group.get_image, size: "50x50", class: "rounded-circle" %>
           </td>
           <td>
-  <%= link_to group.name, admin_group_chats_path(group), class: "text-decoration-none" %>
-</td>
+            <%= link_to group.name, admin_group_chats_path(group), class: "text-decoration-none" %>
+          </td>
           <td><%= group.detail %></td>
           <td><%= group.owner.name %></td>
           <td class="text-center"><%= group.approved_users_count %></td>
