--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,24 @@
-
 <div class="container vh-100 d-flex justify-content-center align-items-center">
   <div class="row w-100">
     <div class="col-sm-12 col-md-8 col-lg-5 mx-auto shadow p-4 rounded bg-white">
-    <h2 class="text-center my-4">Sign up</h2>
+      <h2 class="text-center my-4">Sign up</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "needs-validation") do |f| %>
         <%= render "admin/shared/error_messages", resource: resource %>
 
+        <!-- 名前の入力フィールド -->
+        <div class="form-group mb-3">
+          <%= f.label :name, class: "form-label" %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+        </div>
+
+        <!-- メールアドレスの入力フィールド -->
         <div class="form-group mb-3">
           <%= f.label :email, class: "form-label" %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
 
+        <!-- パスワードの入力フィールド -->
         <div class="form-group mb-3">
           <%= f.label :password, class: "form-label" %>
           <% if @minimum_password_length %>
