--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
               <%= link_to "All Group", groups_path, class: "nav-link text-light" %>
             </li>
             <li>
-              <%= link_to "My Group", groups_path, class: "nav-link text-light" %>
+              <%= link_to "My Group", my_groups_groups_path, class: "nav-link text-light" %>
             </li>
             <li>
               <%= link_to "Log out", destroy_user_session_path, class:"nav-link text-light", method: :delete %>
