--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,24 +7,31 @@
     <div class="card mb-4">
       <div class="card-body">
         <% if post.user %> 
-          <h5 class="card-title">
-            <strong><%= link_to post.user.name, user_path(post.user), class: 'text-dark' %></strong> が投稿しました：
-          </h5>
-          <!-- post.text をクリック可能にして、投稿の show ページに遷移させる -->
+          <!-- 投稿者情報 -->
+          <div class="d-flex align-items-center mb-3">
+            <!-- 投稿者のアバター画像 -->
+            <%= image_tag(post.user.avatar.attached? ? post.user.avatar : "no_image.jpg", size: "40x40", class: "rounded-circle me-3") %>
+            <h5 class="card-title">
+              <strong><%= link_to post.user.name, user_path(post.user), class: 'text-dark' %></strong> が投稿しました：
+            </h5>
+          </div>
+
+          <!-- 投稿内容 -->
           <p class="card-text">
             <%= link_to post.text, post_path(post), class: 'text-dark' %>
           </p>
         <% else %>
           <h5 class="card-title"><strong>Already deleted</strong> が投稿しました：</h5>
-          <!-- ユーザーが削除されている場合はリンクを表示しない -->
           <p class="card-text"><%= post.text %></p>
         <% end %>
 
+        <!-- コメント数 -->
         <p class="text-muted"><%= "#{post.comments.count} コメント" %></p>
 
-        <% if post.images.attached? %> <!-- 画像が添付されているか確認 -->
+        <!-- 画像が添付されている場合 -->
+        <% if post.images.attached? %> 
           <div class="row">
-            <% post.images.each do |image| %> <!-- 画像をループで表示 -->
+            <% post.images.each do |image| %> 
               <div class="col-12 col-md-4 mb-2">
                 <%= image_tag image, class: 'img-fluid rounded' %>
               </div>
@@ -32,9 +39,11 @@
           </div>
         <% end %>
 
+        <!-- 投稿の作成日時 -->
         <p class="text-muted mt-2"><%= post.created_at.in_time_zone('Asia/Tokyo').strftime("%Y-%m-%d %H:%M") %></p>
-        
-        <% if post.user == current_user %>  <!-- 投稿がログインユーザーによって作成されたものである場合 -->
+
+        <!-- 投稿者が現在のユーザーの場合 -->
+        <% if post.user == current_user %>  
           <div class="btn-group" role="group">
             <%= link_to '編集', edit_post_path(post), class: 'btn btn-primary' %>
             <%= link_to '削除', post_path(post), method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'btn btn-danger' %>
