--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,14 +4,18 @@
 <div class="container">
   <% if @user == current_user %>
     <!-- ユーザー自身の場合、プロフィールの編集ができる -->
-    <div class="mb-4">
+    <div class="mb-4 text-center">
+      <!-- プロフィール画像の表示 -->
+      <%= image_tag(@user.avatar.attached? ? @user.avatar : "no_image.jpg", size: "150x150", class: "img-fluid rounded-circle") %>
       <p><strong>Name:</strong> <%= @user.name %></p>
       <p><strong>Email:</strong> <%= @user.email %></p>
       <%= link_to 'Edit Profile', edit_user_path(@user), class: 'btn btn-primary btn-lg' %>
     </div>
   <% else %>
     <!-- 他のユーザーのプロフィール -->
-    <div class="mb-4">
+    <div class="mb-4 text-center">
+      <!-- プロフィール画像の表示 -->
+      <%= image_tag(@user.avatar.attached? ? @user.avatar : "no_image.jpg", size: "150x150", class: "img-fluid rounded-circle") %>
       <p><strong>Name:</strong> <%= @user.name %></p>
     </div>
 
