--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -21,14 +21,28 @@
     </div>
 
     <div class="form-group">
-      <h4>画像を選択</h4>
+      <h4>画像を選択 画像を選択すると現在の画像はすべて消えます</h4>
       <%= f.file_field :images, multiple: true, class: 'form-control-file' %>
     </div>
+
+    <% if @post.images.attached? %>
+      <div class="form-group">
+        <h4>現在の画像</h4>
+        <div class="row">
+          <% @post.images.each_with_index do |image, index| %>
+            <div class="col-3 mb-2 position-relative">
+              <%= image_tag(image, class: 'img-fluid rounded') %>
+              <%= link_to '×', remove_image_post_path(@post, image_id: image.id), method: :delete, class: 'position-absolute top-0 right-0 text-danger' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
 
     <div class="form-group text-center">
       <%= f.submit "更新する", class: "btn btn-primary btn-lg" %>
     </div>
-  <% end %>
+  <% end %>  <!-- この行でフォームブロックを閉じる -->
 
   <div class="text-center mt-3">
     <%= link_to 'キャンセル', posts_path, class: "btn btn-secondary" %>
