--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+  <p>lorem ipsum</p>  <!-- この行を追加 -->
   <%= render 'layouts/header' %>
   <% if notice %>
     <div class="alert alert-success"><%= notice %></div>
