--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,9 @@
     <h4><%= @post.text %></h4> <!-- 編集リンクがない場合、テキストのみ表示 -->
   <% end %>
 
+  <!-- いいね数の表示 -->
+  <p>いいね: <%= @post.likes.count %> 件</p>  <!-- ここで「いいね」の数を表示 -->
+
   <!-- 投稿の画像を表示 -->
   <% if @post.images.attached? %>
     <div class="row">
