--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,3 +1,13 @@
+<% if @group.errors.any? %>
+  <div class="alert alert-danger">
+    <ul>
+      <% @group.errors.full_messages.each do |message| %>
+        <%= message %><br>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
