--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,14 @@
+<!-- バリデーションエラーメッセージを上部に表示 -->
+<% if @group.errors.any? %>
+  <div class="alert alert-danger">
+    <ul>
+      <% @group.errors.full_messages.each do |message| %>
+        <%= message %><br>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -7,18 +18,21 @@
       <h3 class="text-center mb-4">Create Group</h3>
 
       <%= form_with model: @group, local: true do |f| %>
+        
+
+
         <div class="form-group mb-3">
-          <%= f.label :グループ名, class: 'form-label' %>
+          <%= f.label :name, 'グループ名', class: 'form-label' %>
           <%= f.text_field :name, class: 'form-control', placeholder: 'Enter group name' %>
         </div>
 
         <div class="form-group mb-3">
-          <%= f.label :紹介文, class: 'form-label' %>
+          <%= f.label :detail, '紹介文', class: 'form-label' %>
           <%= f.text_area :detail, class: 'form-control', rows: 5, placeholder: 'Write a brief description' %>
         </div>
 
         <div class="form-group mb-3">
-          <%= f.label :グループ画像, class: 'form-label' %>
+          <%= f.label :image, 'グループ画像', class: 'form-label' %>
           <%= f.file_field :image, class: 'form-control-file', accept: 'image/*' %>
         </div>
 
