--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
 # 新しいコメントをコメントセクションに追加
 $("#comments").append("<%= j render @comment %>");
-$("#comment_comment").val("");  // コメントフォームをクリア
+$("#comment_comment").val("");
