--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -34,7 +34,7 @@
         <% if post.images.attached? %> 
           <div class="row">
             <% post.images.each do |image| %> 
-              <div class="col-12 col-md-4 mb-2">
+              <div class="col-12 col-md-6 col-lg-4 mb-2">
                 <%= image_tag image, class: 'img-fluid rounded' %>
               </div>
             <% end %>
@@ -43,8 +43,8 @@
 
         <p class="text-muted mt-2"><%= post.created_at.in_time_zone('Asia/Tokyo').strftime("%Y-%m-%d %H:%M") %></p>
 
-        <div class="d-flex justify-content-between align-items-center">
-          <div>
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center">
+          <div class="mb-2 mb-md-0">
             <% if user_signed_in? %>
               <% if post.liked_by?(current_user) %>
                 <!-- いいね解除ボタン（塗りつぶしハート） -->
