--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -2,7 +2,7 @@
 
 <!-- 戻るボタン -->
 <div class="text-center mb-4">
-  <%= link_to 'グループ一覧に戻る', groups_path, class: "btn btn-secondary" %>
+  <%= link_to 'マイグループに戻る', my_groups_groups_path, class: "btn btn-secondary" %>
 </div>
 
 <div class="container">
@@ -36,8 +36,6 @@
                               class: 'btn btn-sm btn-danger' %>
                 </div>
               <% end %>
-
-
             </div>
           </div>
         <% end %>
