--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,6 @@
-
 <div class="container">
   <div class="row justify-content-center text-center">
-    <div class="col-md-8">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
       <h2 class="display-4 mb-3">Welcome to <strong>toritori</strong>!</h2>
       <p class="lead mb-4">可愛らしい鳥の写真を共有してほっこりしましょう</p>
       <p class="lead">愛しい小鳥さんを逃してしまったら、<br>コミュニティ機能を使用して捜索を手伝ってくれる方を見つけましょう</p>
