--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,20 +4,23 @@
 <div class="container">
   <%= form_with model: @post, html: { class: 'needs-validation', novalidate: true } do |f| %>
     
-    <div class="form-group">
-      <%= f.label :text, "投稿内容" %>
-      <%= f.text_area :text, placeholder: '投稿内容を入力してください', class: "form-control", rows: 5 %>
-    </div>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+        <div class="form-group">
+          <%= f.label :text, "投稿内容" %>
+          <%= f.text_area :text, placeholder: '投稿内容を入力してください', class: "form-control", rows: 5 %>
+        </div>
 
-    <div class="form-group">
-      <h4>画像を選択</h4>
-      <%= f.file_field :images, multiple: true, class: 'form-control-file' %>
-      <%= f.label :images, "画像（複数選択可）" %>
-    </div>
+        <div class="form-group">
+          <h4>画像を選択</h4>
+          <%= f.file_field :images, multiple: true, class: 'form-control-file' %>
+          <%= f.label :images, "画像（複数選択可）" %>
+        </div>
 
-    <div class="form-group text-center">
-      <%= f.submit '投稿', class: "btn btn-primary btn-lg" %>
+        <div class="form-group text-center">
+          <%= f.submit '投稿', class: "btn btn-primary btn-lg" %>
+        </div>
+      </div>
     </div>
-
   <% end %>
 </div>
