googlemapが表示されない失敗した2

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -86,7 +86,7 @@
 
   // Google Maps APIを非同期に読み込む
   const script = document.createElement('script');
-  script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCa6D2bafkz0Ma9gFY9dBEN_ouhIWh9j2A&callback=initMap";
+  script.src = "https://maps.googleapis.com/maps/api/js?key=Maps Javascript API&callback=initMap";
   script.async = true;
   script.defer = true;
   document.body.appendChild(script);
