--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -73,7 +73,7 @@
 
   <!-- Google Maps JavaScript API の読み込み -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['Maps_API_Key'] %>&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap">
   </script>
 
   <script>
@@ -85,7 +85,6 @@
       };
       var map = new google.maps.Map(document.getElementById('map'), mapOptions);
 
-      // もし位置情報があれば、その位置を地図にマーカーとして表示
       <% @chats.each do |chat| %>
         <% if chat.latitude.present? && chat.longitude.present? %>
           var marker = new google.maps.Marker({
