レイアウト微調整

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <%= render 'layouts/search' %>
 
-<h1 class="text-center my-4">ログイン者投稿一覧</h1>
-<p class="text-center">Find me in <code>app/views/posts/index.html.erb</code></p>
+<h1 class="text-center my-4">My Post</h1>
 
 <div class="container">
   <% @posts.each do |post| %>
