--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1 class="text-center my-4">新規投稿</h1>
-<p class="text-center">Find me in <code>app/views/posts/new.html.erb</code></p>
+<h1 class="text-center my-4">New Post</h1>
 
 <div class="container">
   <%= form_with model: @post, html: { class: 'needs-validation', novalidate: true } do |f| %>
