--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,8 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
-      <h1 class="text-center mb-4">Groups#index</h1>
-      <p class="text-center text-muted">Find me in app/views/groups/index.html.erb</p>
+      <h1 class="text-center mb-4">All Group</h1>
 
       <!-- 検索フォーム -->
       <div class="mb-4">
