--- a/app/views/groups/my_groups.html.erb
+++ b/app/views/groups/my_groups.html.erb
@@ -2,7 +2,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
-      <h1 class="text-center mb-4">自分のグループ</h1>
+      <h1 class="text-center mb-4">My Group</h1>
 
       <table class="table table-hover table-bordered">
         <thead class="table-light">
