--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-8 offset-md-2">
       
       <!-- 投稿詳細 -->
-      <h2 class="mb-4">投稿一覧</h2>
+      <h2 class="mb-4">Post Detail</h2>
 
       <div class="card shadow-sm mb-4">
         <div class="card-body">
