--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -4,14 +4,13 @@
       <h1 class="mb-4">一般ユーザーが投稿したコメント一覧</h1>
       
       <!-- 説明文 -->
-      <p>Find me in app/views/admin/homes/top.html.erb</p>
 
       <!-- コメント一覧テーブル -->
       <table class="table table-striped table-bordered">
         <thead class="thead-dark">
           <tr>
             <th>コメントユーザー名</th>
-            <th>投稿内容</th> <!-- 投稿タイトルを追加 -->
+            <th>コメント先投稿</th> <!-- 投稿タイトルを追加 -->
             <th>コメント内容</th>
             <th>投稿日時</th>
           </tr>
