--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,12 +7,10 @@
   </div>
 <% end %>
 
-<h1 class="text-center my-4">Posts#edit</h1>
-<p class="text-center">Find me in <code>app/views/posts/edit.html.erb</code></p>
+<h1 class="text-center my-4">Posts Edit</h1>
 
 <div class="container">
 
-  <h2 class="text-center mb-4">投稿を編集</h2>
 
   <%= form_with model: @post, html: { class: 'needs-validation', novalidate: true } do |f| %>
 
