PF完成提出後の修正main

--- a/app/views/admin/chats/index.html.erb
+++ b/app/views/admin/chats/index.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center mb-4">チャット一覧</h1>
+
 <div id="chat-box" class="mb-4" style="max-height: 400px; overflow-y: scroll;">
   <% @chats.each do |chat| %>
     <div class="chat-message mb-3 d-flex justify-content-center">
